@@ -49,22 +49,6 @@
       <scope>test</scope>
     </dependency>
 
-    <!-- Jena pre 2.6.2
-    <dependency>
-      <groupId>com.hp.hpl.jena</groupId>
-      <artifactId>jena</artifactId>
-      <version>2.6.0</version>
-    </dependency>
-
-    <dependency>
-      <groupId>com.hp.hpl.jena</groupId>
-      <artifactId>jenatest</artifactId>
-      <version>2.6.0</version>
-      <scope>test</scope>
-    </dependency>
-    -->
-
-
     <dependency>
       <groupId>org.codehaus.woodstox</groupId>
       <artifactId>wstx-asl</artifactId>
@@ -344,10 +328,10 @@ build.time.txt=${build.time.txt}
       <id>jena-repo</id>
       <name>Jena repo</name>
 
-      <url>sftp://openjena.org/var/repo</url>
+      <!--<url>sftp://openjena.org/var/repo</url>-->
 
       <!-- Because RC's aren't snapshots -->
-      <!-- <url>sftp://openjena.org/var/repo-dev</url> -->
+      <url>sftp://openjena.org/var/repo-dev</url>
 
       <!--<url>file:tmp</url>-->
       <layout>default</layout>
