@@ -26,6 +26,7 @@ public class ResultSetFormat extends Symbol
     public static final ResultSetFormat syntaxJSON         = new ResultSetFormat("RS_JSON") ;
     
     public static final ResultSetFormat syntaxSSE          = new ResultSetFormat("RS_SSE") ;
+    public static final ResultSetFormat syntaxCSV          = new ResultSetFormat("RS_CSV") ;
 
     // Common names to symbol (used by arq.rset)
     protected static TranslationTable syntaxNames = new TranslationTable(true) ;
@@ -42,6 +43,7 @@ public class ResultSetFormat extends Symbol
         syntaxNames.put("json",    ResultSetFormat.syntaxJSON) ;
         syntaxNames.put("yaml",    ResultSetFormat.syntaxJSON) ;    // The JSON format is a subset of YAML
         syntaxNames.put("sse",     ResultSetFormat.syntaxSSE) ;
+        syntaxNames.put("csv",     ResultSetFormat.syntaxCSV) ;
     }
 
     protected ResultSetFormat(String symbol) { super(symbol) ; }
@@ -90,6 +92,10 @@ public class ResultSetFormat extends Symbol
         // -- SSE : http://jena.hpl.hp.com/wiki/SSE
         if ( url.endsWith(".sse") )
             return ResultSetFormat.syntaxSSE ;
+
+        // Likelyto be something completely different!
+        if ( url.endsWith(".csv") )
+            return ResultSetFormat.syntaxCSV ;
         
         return defaultFormat ;
     }
