@@ -18,6 +18,7 @@ public class ResultsFormat extends Symbol
     public final static ResultsFormat FMT_RS_XML   = new ResultsFormat("rs/xml") ;    /** Format of result set as XML */
     public final static ResultsFormat FMT_RS_JSON  = new ResultsFormat("rs/json") ;   /** Format of result set as JSON */
     public final static ResultsFormat FMT_RS_SSE   = new ResultsFormat("rs/sse") ;    /** Format of result set as SSE */ 
+    public final static ResultsFormat FMT_RS_CSV   = new ResultsFormat("rs/csv") ;
 
     public final static ResultsFormat FMT_NONE     = new ResultsFormat("none") ;       /** No output */
     public final static ResultsFormat FMT_TEXT     = new ResultsFormat("rs/text") ;   /** Any kind of text */
@@ -31,6 +32,8 @@ public class ResultsFormat extends Symbol
     public final static ResultsFormat FMT_RDF_N3   = new ResultsFormat("N3") ;
     public final static ResultsFormat FMT_RDF_TTL  = new ResultsFormat("Turtle") ;
     public final static ResultsFormat FMT_RDF_NT   = new ResultsFormat("N-TRIPLES") ;
+
+
     
     public final static ResultsFormat FMT_UNKNOWN   = new ResultsFormat("unknown") ;
     
@@ -61,6 +64,9 @@ public class ResultsFormat extends Symbol
         // result set - SSE tables
         resultFormats.put("rs/sse",    ResultsFormat.FMT_RS_SSE ) ;
         resultFormats.put("sse",       ResultsFormat.FMT_RS_SSE ) ;
+
+        resultFormats.put("rs/csv",    ResultsFormat.FMT_RS_CSV ) ;
+        resultFormats.put("csv",       ResultsFormat.FMT_RS_CSV ) ;
         
         // Dump!
         resultFormats.put("tuples",    ResultsFormat.FMT_TUPLES ) ;
